# kirox-monitor

./: .env.example  .env.test.example  .gitignore  ANALYSIS_REPORT.md  INSTALL.md  MANUAL.md  PLAN.md  README.md  ROADMAP.md  contexto.txt  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: Dockerfile  Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8c4d3e9027bf_initial_schema.py  b0a7c981cc80_add_server_extended_fields.py
backend/app/: main.py
backend/app/api/v1/: alerts.py  auth.py  health.py  metrics.py  servers.py  users.py  ws.py
backend/app/core/: config.py  database.py  deps.py  encryption.py  exception_handlers.py  exceptions.py  logging.py  middleware.py  security.py  websocket_manager.py
backend/app/models/: alert.py  audit_log.py  base.py  metric.py  server.py  user.py
backend/app/repositories/: alert_repository.py  audit_log_repository.py  metric_repository.py  server_repository.py  user_repository.py
backend/app/schemas/: alert.py  metric.py  server.py  user.py
backend/app/services/: alert_engine.py  auth_service.py  monitoring_orchestrator.py  server_service.py  ssh_manager.py
backend/app/services/collectors/: odoo_collector.py  pg_collector.py  system_collector.py
backend/app/services/notifications/: email_notifier.py  notification_dispatcher.py  telegram_notifier.py  webhook_notifier.py
backend/app/workers/: celery_app.py  tasks.py  ws_publisher.py
backend/scripts/: seed.py  start.sh
backend/tests/: conftest.py
backend/tests/integration/: test_health.py
backend/tests/integration/api/: test_auth_api.py
backend/tests/unit/: test_alert_engine.py  test_auth_schemas.py  test_auth_service.py  test_config.py  test_exceptions.py  test_logging.py  test_monitoring_orchestrator.py  test_security.py  test_server_schemas.py  test_server_service.py  test_ssh_manager.py  test_websocket_manager.py
backend/tests/unit/collectors/: test_odoo_collector.py  test_pg_collector.py  test_system_collector.py
backend/tests/unit/workers/: test_tasks.py
frontend/: Dockerfile  Dockerfile.dev  eslint.config.js  index.html  nginx.frontend.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: alerts.ts  auth.ts  client.ts  metrics.ts  servers.ts
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
frontend/src/components/metrics/: MetricChart.tsx  MetricGauge.tsx  TimeSeriesChart.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  Spinner.tsx  Table.tsx  index.ts
frontend/src/components/ui/__tests__/: Badge.test.tsx  Button.test.tsx  Input.test.tsx  Modal.test.tsx  Table.test.tsx
frontend/src/hooks/: useAlerts.ts  useAuth.ts  useServerMetrics.ts  useServers.ts  useWebSocket.ts
frontend/src/pages/: AlertsPage.tsx  DashboardPage.tsx  LoginPage.tsx  ServersPage.tsx  SettingsPage.tsx
frontend/src/pages/servers/: ServerDetailPage.tsx  ServerFormModal.tsx
frontend/src/stores/: authStore.ts  serverStore.ts
frontend/src/styles/: index.css
frontend/src/types/: dashboard.ts  index.ts
nginx/: nginx.conf
scripts/: wait-for-it.sh
