[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odoo-monitor-backend"
version = "0.1.0"
description = "Odoo server monitoring system"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "alembic==1.14.0",
    # Validation
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "email-validator==2.2.0",
    # Auth & Security
    "PyJWT==2.10.1",
    "bcrypt==4.2.1",
    "cryptography==44.0.0",
    "slowapi==0.1.9",
    # HTTP client
    "httpx==0.28.1",
    # Queue / Workers
    "celery[redis]==5.4.0",
    "redis==5.2.1",
    # SSH
    "paramiko==3.5.0",
    # Email
    "aiosmtplib==3.0.2",
    # Logging
    "structlog==24.4.0",
    # Utilities
    "python-multipart==0.0.20",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
prod = []
dev = [
    # Testing
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "anyio==4.7.0",
    "factory-boy==3.3.1",
    "freezegun==1.5.1",
    # Linting
    "ruff==0.8.4",
    "mypy==1.13.0",
    # Type stubs
    "types-redis==4.6.0.20241004",
    "types-paramiko==3.5.0.20240928",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "A", "C4", "PTH"]
ignore = [
    "S101",   # assert in tests OK
    "B008",   # FastAPI Depends() in defaults
    "S105",   # hardcoded passwords in tests
    "S106",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N"]
"alembic/**" = ["E501"]

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]

# ── isort ─────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = false
warn_unused_configs = true
exclude = ["alembic/", "tests/"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
warn_required_dynamic_aliases = false

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ── coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
